@@ -41,6 +41,7 @@ enum MalagaSymbol {
 	MS_REQUIRE_FOLLOWING_VERB,
 	MS_TENSE,
 	MS_PARTICIPLE,
+	MS_POSSESSIVE,
 	MS_LAST_SYMBOL
 };
 
