@@ -1,3 +1,6 @@
+2011-04-16 Harri Pitkänen <hatapitk@iki.fi>
+	* Support possessive suffixes in Malaga analyzer.
+
 2011-03-31 Harri Pitkänen <hatapitk@iki.fi>
 	* Support grammatical tense in Malaga analyzer.
 	* Support participles in Malaga analyzer.
